--- a/omniV1.css
+++ b/omniV1.css
@@ -142,3 +142,12 @@ nav a:hover{
 	font-family: "Open Sans";
 	margin-bottom: 5vh;
 }
+
+#google_translate_element{
+	height: 50px;
+	width: 750px;
+	position: fixed;
+	top: 250px;
+	left: 250px;
+	z-index: 999999999999999999999999999999;
+}
