--- a/omniV1.css
+++ b/omniV1.css
@@ -143,7 +143,7 @@ nav a:hover{
 	margin-bottom: 5vh;
 }
 
-#google_translate_element{
+.google_translate_element{
 	height: 50px;
 	width: 750px;
 	position: fixed;
