--- a/omniV1.css
+++ b/omniV1.css
@@ -151,5 +151,5 @@ nav a:hover{
 	left: 250px;
 	z-index: 999999999999999999999999999999;
 }
-.goog-te-banner-frame.skiptranslate {display: none !important;} 
+.google_translate_element.skiptranslate {display: none !important;} 
 body { top: 0px !important; }
