--- a/omniV1.css
+++ b/omniV1.css
@@ -154,3 +154,7 @@ nav a:hover{
 }
 .google_translate_element.skiptranslate {display: none !important;} 
 body { top: 0px !important; }
+
+.nav-up {
+    top: -40px;
+}
