--- a/omniV1.css
+++ b/omniV1.css
@@ -121,9 +121,9 @@ nav a:hover{
 	color: black;
 	background-color: rgba(255,255,255,0.75);
 	position: absolute;
-	top: 50vh;
+	top: 25vh;
 	left: 50vw;
-	transform: translate(-50%, -50%);
+	transform: translateX(-50%);
 	z-index: 1250;
 	padding: 1vw 2vw;
 	font-family: "Montserrat";
