--- a/omniV1.css
+++ b/omniV1.css
@@ -46,8 +46,8 @@ body{
 	position: fixed;
 	top: 0;
 	left: 0;
-	height: 1080px;
-	width: 1920px;
+	min-width: 100%; 
+	min-height: 100%;
 	left: 0;
 	z-index: -1;
 	animation: loadVideo 1.8s ease;
