--- a/omniV1.css
+++ b/omniV1.css
@@ -44,8 +44,8 @@ body{
 
 #header_background{
 	position: fixed;
-	top: 0;
-	left: 0;
+	bottom: 0;
+	right: 0;
 	min-width: 100%; 
 	min-height: 100%;
 	left: 0;
