--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -58,8 +58,8 @@ body{
 }
 
 @keyframes loadVideo{
-	from{filter: blur(100px);}
-	to{filter: blur(0);}
+	from{opacity: 0;}
+	to{opacity: 1;}
 }
 
 #header_navbar{
