--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -151,11 +151,12 @@ nav a:hover{
 
 #google_translate_element{
 	position: fixed;
-	/*margin-top: 45vh;*/
-	top: 35vh;
-	right: 50px;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 4vw;
 	z-index: 9999;
 	background-color: #fff;
+	padding: 1vw;
 }
 
 .nav-up {
