--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -179,10 +179,6 @@ nav a:hover{
     top: -5vh;
 }
 
-.test {
-	z-index: 99999;
-}
-
 .hideme{
 	opacity: 0;
 }
@@ -246,4 +242,8 @@ nav a:hover{
 	0%{opacity: 0;}
 	50%{opacity: 1;}
 	100%{opacity: 0;}
+}
+.box{
+	position: fixed;
+	z-index: 999999999999999999999999999999999999;
 }
