--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -244,6 +244,6 @@ nav a:hover{
 	100%{opacity: 0;}
 }
 .box{
-	position: fixed;
+	position: relative;
 	z-index: 999999999999999999999999999999999999;
 }
