--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -1,7 +1,7 @@
 body{
 	overflow-x: hidden;
 	overflow-y: scroll;
-	background-color: #2f4f4f;
+	background: linear-gradient(#4C332E, #C7BBBB, #1A181B);
 	background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/99/95/6457fb584a65c01.jpg);
 	background-size: 100vw 100vh;
 	background-attachment: fixed;
