--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -147,7 +147,7 @@ nav a:hover{
 	z-index: 100000;
 	font-family: "Open Sans";
 	margin-bottom: 5vh;
-	align-text: justify;
+	text-align: justify;
 }
 
 #article1{
