--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -90,12 +90,9 @@ body{
 	top: 0;
 	right: 2vw;
 	height: 5vh;
-	width: 40vw;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
 	color: black;
 	text-decoration: none;
+	display: inline;
 }
 
 .nav_main_link{
@@ -104,6 +101,7 @@ body{
 	font-family: "Montserrat";
 	transition: color 0.3s ease-in-out;
 	padding: 10px;
+	display: inline;
 }
 
 #nav_title_link{
