--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -78,6 +78,7 @@ body{
 	transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
 	border-bottom: 1px solid black;
 	background: linear-gradient(rgba(255,255,255,0.75), rgba(255,255,255,0.5));
+	transition: top 0.75s ease-in-out;
 }
 
 #header_navbar:hover{
