--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -173,10 +173,11 @@ header a:hover{
 	position: fixed;
 	bottom: 0;
 	left: 0;
+	opacity: 0;
 }
 
 .nav-up {
-    top: -5vh;
+    top: -5vh !important;
 }
 
 .hideme{
