--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -5,7 +5,7 @@ body{
 	background-image: url(https://png.pngtree.com/thumb_back/fw800/back_pic/03/99/95/6457fb584a65c01.jpg);
 	background-size: 100vw 100vh;
 	background-attachment: fixed;
-	font-family: "Roboto";
+	font-family: "Roboto", sans-serif;
 }
 
 *:focus{
