--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -186,6 +186,8 @@ header a:hover{
 	padding: 1vw;
 	opacity: 0.75;
 	transition: opacity 0.2s ease-in-out;
+	text-decoration: none;
+	color: #000;
 }
 
 #backTop:hover{
