--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -257,8 +257,8 @@ header a:hover{
 }
 
 .pageLoaded{
-	animation: fadeIn 1s ease-in-out;
-	opacity: 1;
+	animation: fadeIn 1s ease-in-out !important;
+	opacity: 1 !important;
 }
 
 #contentPreLoader{
