--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -219,6 +219,11 @@ header a:hover{
 	user-select: none;
 	cursor: pointer;
 	transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
+	margin: 10px;
+}
+
+.sources{
+	margin: 5px;
 }
 
 .active{
