--- a/style/omniV1.css
+++ b/style/omniV1.css
@@ -220,6 +220,9 @@ header a:hover{
 	cursor: pointer;
 	transition: color 0.25s ease-in-out, background-color 0.25s ease-in-out;
 	margin: 10px;
+	box-sizing: border-box;
+	border: 2px solid #444;
+	border-radius: 5px;
 }
 
 .sources{
